# git-monitor

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  README_CN.md
.github/workflows/: release.yml
src/: app.rs  banner.rs  main.rs  terminal.rs
src/event/: handler.rs  mod.rs
src/git/: mod.rs  repository.rs  watcher.rs
src/ui/: icons.rs  layout.rs  mod.rs  theme.rs
src/ui/components/: diff_view.rs  file_list.rs  mod.rs  status_bar.rs
src/ui/effects/: manager.rs
